added IBAction for the Pick button

--- a/MemeMe V1.0/Base.lproj/Main.storyboard
+++ b/MemeMe V1.0/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_1" orientation="landscape" appearance="light"/>
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -12,34 +12,43 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MemeMe_V1_0" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xU1-aj-LjZ">
-                                <rect key="frame" x="44" y="-133" width="1290" height="44"/>
+                                <rect key="frame" x="0.0" y="813" width="414" height="49"/>
                                 <items>
-                                    <barButtonItem title="Pick" id="6LF-yu-gdc"/>
+                                    <barButtonItem title="Pick" id="6LF-yu-gdc">
+                                        <connections>
+                                            <action selector="pickAnImage:" destination="BYZ-38-t0r" id="NoT-r0-LFc"/>
+                                        </connections>
+                                    </barButtonItem>
                                 </items>
                             </toolbar>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hgs-bs-haA">
-                                <rect key="frame" x="44" y="-482" width="1290" height="44"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                                 <items>
                                     <barButtonItem title="Item" id="hyH-7w-CqH"/>
                                 </items>
                             </toolbar>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NOG-nk-rhJ">
-                                <rect key="frame" x="87" y="384" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NOG-nk-rhJ">
+                                <rect key="frame" x="87" y="389" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="0lt-A7-Kpe"/>
+                                    <constraint firstAttribute="height" constant="128" id="Dpd-lw-H3r"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="NOG-nk-rhJ" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="1mo-ty-O0N"/>
                             <constraint firstItem="xU1-aj-LjZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="5hs-t3-XBk"/>
                             <constraint firstItem="hgs-bs-haA" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Eed-je-OW0"/>
                             <constraint firstItem="xU1-aj-LjZ" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="FSd-am-RVO"/>
                             <constraint firstItem="hgs-bs-haA" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="LGX-mR-Uax"/>
                             <constraint firstItem="xU1-aj-LjZ" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="R51-EM-bnk"/>
                             <constraint firstItem="hgs-bs-haA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="amA-b7-baT"/>
+                            <constraint firstItem="NOG-nk-rhJ" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="k7j-a5-WrM"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
