--- a/MemeMe V1.0/Base.lproj/Main.storyboard
+++ b/MemeMe V1.0/Base.lproj/Main.storyboard
@@ -32,10 +32,10 @@
                                 </items>
                             </toolbar>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NOG-nk-rhJ">
-                                <rect key="frame" x="87" y="389" width="240" height="128"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="240" id="0lt-A7-Kpe"/>
-                                    <constraint firstAttribute="height" constant="128" id="Dpd-lw-H3r"/>
+                                    <constraint firstAttribute="width" constant="414" id="0KY-e8-zg4"/>
+                                    <constraint firstAttribute="height" constant="818" id="YrZ-KM-Ixn"/>
                                 </constraints>
                             </imageView>
                         </subviews>
@@ -52,10 +52,13 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="NOG-nk-rhJ" id="8Mf-oq-Yeb"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="139" y="113"/>
+            <point key="canvasLocation" x="137.68115942028987" y="112.5"/>
         </scene>
     </scenes>
 </document>
