--- a/MemeMe V1.0/Base.lproj/Main.storyboard
+++ b/MemeMe V1.0/Base.lproj/Main.storyboard
@@ -15,36 +15,43 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="center" translatesAutoresizingMaskIntoConstraints="NO" id="xU1-aj-LjZ">
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="xU1-aj-LjZ">
                                 <rect key="frame" x="0.0" y="813" width="414" height="49"/>
                                 <items>
-                                    <barButtonItem title="Album" width="210.5" id="6LF-yu-gdc" userLabel="Album">
+                                    <barButtonItem title="Album" width="265.5" id="6LF-yu-gdc" userLabel="Album">
                                         <connections>
                                             <action selector="pickAnImageFromAlbum:" destination="BYZ-38-t0r" id="0Uk-uq-5Of"/>
                                         </connections>
                                     </barButtonItem>
-                                    <barButtonItem title="Camera" width="143" id="JUV-cN-gZw">
+                                    <barButtonItem systemItem="camera" id="JUV-cN-gZw">
                                         <connections>
                                             <action selector="pickAnImageFromCamera:" destination="BYZ-38-t0r" id="KH1-F4-Pzi"/>
                                         </connections>
                                     </barButtonItem>
                                 </items>
                             </toolbar>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hgs-bs-haA">
-                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="hgs-bs-haA">
+                                <rect key="frame" x="0.0" y="44" width="414" height="49"/>
                                 <items>
-                                    <barButtonItem title="Item" id="hyH-7w-CqH"/>
+                                    <barButtonItem systemItem="action" id="hyH-7w-CqH">
+                                        <connections>
+                                            <action selector="share:" destination="BYZ-38-t0r" id="eMd-2P-L8P"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem systemItem="cancel" id="vLp-SZ-PIU">
+                                        <connections>
+                                            <action selector="cancelButtonAction:" destination="BYZ-38-t0r" id="uoZ-PW-DOf"/>
+                                        </connections>
+                                    </barButtonItem>
                                 </items>
                             </toolbar>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NOG-nk-rhJ">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="414" id="0KY-e8-zg4"/>
-                                    <constraint firstAttribute="height" constant="818" id="YrZ-KM-Ixn"/>
-                                </constraints>
+                                <rect key="frame" x="0.0" y="93" width="414" height="720"/>
                             </imageView>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="BOTTOM" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="x21-es-w77">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" text="BOTTOM" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="x21-es-w77">
                                 <rect key="frame" x="90" y="760" width="234" height="34"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="textColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
                                 <connections>
@@ -52,7 +59,9 @@
                                 </connections>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="TOP" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qwu-Qx-dFz">
-                                <rect key="frame" x="90" y="99" width="234" height="34"/>
+                                <rect key="frame" x="90" y="104" width="234" height="34"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="textColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
                                 <connections>
@@ -69,13 +78,17 @@
                             <constraint firstItem="xU1-aj-LjZ" firstAttribute="top" secondItem="x21-es-w77" secondAttribute="bottom" constant="19" id="Ijv-D5-K8y"/>
                             <constraint firstItem="hgs-bs-haA" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="LGX-mR-Uax"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="qwu-Qx-dFz" secondAttribute="trailing" constant="90" id="PGa-lh-3kW"/>
+                            <constraint firstItem="NOG-nk-rhJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="QjI-XU-Ub5"/>
                             <constraint firstItem="xU1-aj-LjZ" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="R51-EM-bnk"/>
+                            <constraint firstItem="xU1-aj-LjZ" firstAttribute="top" secondItem="NOG-nk-rhJ" secondAttribute="bottom" id="SgP-mF-kle"/>
+                            <constraint firstItem="NOG-nk-rhJ" firstAttribute="top" secondItem="hgs-bs-haA" secondAttribute="bottom" id="WB2-9I-uV7"/>
                             <constraint firstItem="hgs-bs-haA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="amA-b7-baT"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="x21-es-w77" secondAttribute="trailing" constant="90" id="cJt-IT-F1z"/>
                             <constraint firstItem="x21-es-w77" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="d1g-Ec-d69"/>
                             <constraint firstItem="qwu-Qx-dFz" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="dt0-Ca-ZsQ"/>
                             <constraint firstItem="qwu-Qx-dFz" firstAttribute="top" secondItem="hgs-bs-haA" secondAttribute="bottom" constant="11" id="jbg-f5-LSr"/>
                             <constraint firstItem="NOG-nk-rhJ" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="k7j-a5-WrM"/>
+                            <constraint firstItem="NOG-nk-rhJ" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="sB8-SG-lbf"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -83,7 +96,11 @@
                         <outlet property="BOTTOM" destination="x21-es-w77" id="DCM-oo-vet"/>
                         <outlet property="TOP" destination="qwu-Qx-dFz" id="0b0-aH-Fsf"/>
                         <outlet property="cameraButton" destination="JUV-cN-gZw" id="E1d-ZL-lcU"/>
+                        <outlet property="cancelButton" destination="vLp-SZ-PIU" id="M3w-9G-BEN"/>
                         <outlet property="imageView" destination="NOG-nk-rhJ" id="8Mf-oq-Yeb"/>
+                        <outlet property="navBar" destination="hgs-bs-haA" id="GOx-EH-Nsb"/>
+                        <outlet property="shareButton" destination="hyH-7w-CqH" id="4Bn-gX-NyQ"/>
+                        <outlet property="toolBar" destination="xU1-aj-LjZ" id="9ua-Wu-0zO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
